--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+:root {
+  --gold: rgb(139, 116, 57);
+  --white: #fff;
+  --gray-100: #f8f9fa;
+  --gray-200: #e9ecef;
+  --gray-300: #dee2e6;
+  --gray-400: #ced4da;
+  --gray-500: #adb5bd;
+  --gray-600: #6c757d;
+  --gray-700: #495057;
+  --gray-800: #343a40;
+  --gray-900: #212529;
+  --black: #000;
+  --cream:#f5f5dc;
+}
+
+.border-gray-800{
+  border:2px solid var(--gray-800)!important;
+}
+.border-gray-900{
+  border:2px solid var(--gray-900)!important;
+}
+
+
+.bg-gray-100{
+  background-color: var(--gray-100); 
+}
+
+.bg-cream{
+  background-color: var(--cream);
+}
+
+.bg-gray-200{
+  background-color: var(--gray-200);
+}
+
+.bg-gray-300{
+  background-color: var(--gray-300);
+}
+
+.bg-gray-400{
+  background-color: var(--gray-400);
+}
+
+.bg-gray-500{
+  background-color: var(--gray-500);
+}
+
+.bg-gray-600{
+  background-color: var(--gray-600);
+}
+
+.bg-gray-700{
+  background-color: var(--gray-700);
+}
+
+.bg-gray-800{
+  background-color: var(--gray-800);
+}
+
+.bg-gray-900{
+  background-color: var(--gray-900);
+}
+.bg-gold{
+  background-color: var(--gold);
+}
+
+.text-gray-100{
+  color: var(--gray-100);
+}
+
+.text-gray-200{
+  color: var(--gray-200);
+}
+
+.text-gray-300{
+  color: var(--gray-300);
+}
+
+.text-gray-400{
+  color: var(--gray-400);
+}
+
+.text-gray-500{
+  color: var(--gray-500);
+}
+
+.text-gray-600{
+  color: var(--gray-600);
+}
+
+.text-gray-700{
+  color: var(--gray-700);
+}
+
+.text-gray-800{
+  color: var(--gray-800);
+}
+
+.text-gray-900{
+  color: var(--gray-900);
+}
+
+.text-gold{
+  color: var(--gold);
+}
+
+.border-gold{
+  border: 2px solid rgb(139,116,57) !important;
+}
+
+
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fade-up {
+  animation: fadeUp 0.3s ease-in-out;
+}
+
+.custom-link {
+  text-decoration: none; /* Varsayılan olarak altı çizgili olmasın */
+}
+
+.custom-link:hover {
+  text-decoration: underline; /* Hover durumunda underline eklensin */
+  text-decoration-color: rgb(139,116,57); /* Alt çizgi rengi istediğiniz renk olsun */
+}
+
+.blur {
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+.transparent {
+  opacity: 0.4; 
 }
